# Level-Renderer

./: .gitignore
Parsing/: CMakeLists.txt  GameLevel.txt  GameLevelLights.txt  GameLevelLights2.txt  GameLevelTwo.txt  Gateware.h  Level.cpp  Level.h  Model.cpp  Model.h  PixelShader.h  PixelShader.hlsl  VertexShader.h  VertexShader.hlsl  main.cpp  renderer.h
Parsing/Assets/: BaseCharacter.h2b  Bathroom_Bathtub.h2b  Bathroom_Mirror1.h2b  Bathroom_Mirror2.h2b  Bathroom_Shower1.h2b  Bathroom_Sink.h2b  Bathroom_Toilet.h2b  Bathroom_Toilet2.h2b  Bathroom_ToiletPaper.h2b  Bathroom_ToiletPaperPile.h2b  Bathroom_Towel.h2b  Bathroom_WashingMachine.h2b  BedDouble.h2b  BedTwin.h2b  Bed_Bunk.h2b  Bed_King.h2b  Bed_Single.h2b  BlueSoldier_Female.h2b  BlueSoldier_Male.h2b  Bookcase.h2b  Bookcase_Books.h2b  Bookshelf.h2b  Carpet_1.h2b  Carpet_2.h2b  Carpet_Round.h2b  Casual2_Female.h2b  Casual2_Male.h2b  Casual3_Female.h2b  Casual3_Male.h2b  Casual_Bald.h2b  Casual_Female.h2b  Casual_Male.h2b  Chair.h2b  Chair_1.h2b  Chair_2.h2b  Chair_3.h2b  Chair_4.h2b  Chef_Female.h2b  Chef_Hat.h2b  Chef_Male.h2b  (+154 more)
Parsing/TriangulatedBlenderAssets/: Bathroom_Bathtub.h2b  Bathroom_Bathtub.mtl  Bathroom_Mirror1.h2b  Bathroom_Mirror1.mtl  Bathroom_Mirror2.h2b  Bathroom_Mirror2.mtl  Bathroom_Shower1.h2b  Bathroom_Shower1.mtl  Bathroom_Sink.h2b  Bathroom_Sink.mtl  Bathroom_Toilet.h2b  Bathroom_Toilet.mtl  Bathroom_Toilet2.h2b  Bathroom_Toilet2.mtl  Bathroom_ToiletPaper.h2b  Bathroom_ToiletPaper.mtl  Bathroom_ToiletPaperPile.h2b  Bathroom_ToiletPaperPile.mtl  Bathroom_Towel.h2b  Bathroom_Towel.mtl  (+226 more)
